# chip8_emulator

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: chip8.c  chip8.h  clock.c  clock.h  display.c  display.h  input.c  input.h  instructions.c  instructions.h  main.c  types.h
